--- a/platform/kube/bookinfo-ingress.yaml
+++ b/platform/kube/bookinfo-ingress.yaml
@@ -1,63 +1,39 @@
-# Copyright Istio Authors
-#
-#   Licensed under the Apache License, Version 2.0 (the "License");
-#   you may not use this file except in compliance with the License.
-#   You may obtain a copy of the License at
-#
-#       http://www.apache.org/licenses/LICENSE-2.0
-#
-#   Unless required by applicable law or agreed to in writing, software
-#   distributed under the License is distributed on an "AS IS" BASIS,
-#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-#   See the License for the specific language governing permissions and
-#   limitations under the License.
-
-###########################################################################
-# Ingress resource (gateway)
-##########################################################################
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: gateway
-  annotations:
-    kubernetes.io/ingress.class: "istio"
+  name: bookinfo
+  namespace: bookinfo
 spec:
   rules:
-  - http:
+  - host: 54.85.193.124.nip.io
+    http:
       paths:
-      - path: /productpage
-        pathType: Exact
-        backend:
+      - backend:
           service:
             name: productpage
             port:
               number: 9080
-      - path: /static/
+        path: /
         pathType: Prefix
-        backend:
+      - backend:
           service:
-            name: productpage
+            name: details
             port:
               number: 9080
-      - path: /login
-        pathType: Exact
-        backend:
-          service:
-            name: productpage
-            port:
-              number: 9080
-      - path: /logout
-        pathType: Exact
-        backend:
-          service:
-            name: productpage
-            port:
-              number: 9080
-      - path: /api/v1/products
+        path: /details
         pathType: Prefix
-        backend:
+      - backend:
           service:
-            name: productpage
+            name: ratings
             port:
               number: 9080
+        path: /ratings
+        pathType: Prefix
+      - backend:
+          service:
+            name: reviews
+            port:
+              number: 9080
+        path: /reviews
+        pathType: Prefix
 ---
