--- a/platform/kube/bookinfo.yaml
+++ b/platform/kube/bookinfo.yaml
@@ -1,38 +1,13 @@
-# Copyright Istio Authors
-#
-#   Licensed under the Apache License, Version 2.0 (the "License");
-#   you may not use this file except in compliance with the License.
-#   You may obtain a copy of the License at
-#
-#       http://www.apache.org/licenses/LICENSE-2.0
-#
-#   Unless required by applicable law or agreed to in writing, software
-#   distributed under the License is distributed on an "AS IS" BASIS,
-#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-#   See the License for the specific language governing permissions and
-#   limitations under the License.
-
-##################################################################################################
-# This file defines the services, service accounts, and deployments for the Bookinfo sample.
-#
-# To apply all 4 Bookinfo services, their corresponding service accounts, and deployments:
-#
-#   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml
-#
-# Alternatively, you can deploy any resource separately:
-#
-#   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml -l service=reviews # reviews Service
-#   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml -l account=reviews # reviews ServiceAccount
-#   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml -l app=reviews,version=v3 # reviews-v3 Deployment
-##################################################################################################
-
-##################################################################################################
-# Details service
-##################################################################################################
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: bookinfo
+---
 apiVersion: v1
 kind: Service
 metadata:
   name: details
+  namespace: bookinfo
   labels:
     app: details
     service: details
@@ -47,6 +22,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: bookinfo-details
+  namespace: bookinfo
   labels:
     account: details
 ---
@@ -84,6 +60,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ratings
+  namespace: bookinfo
   labels:
     app: ratings
     service: ratings
@@ -98,6 +75,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: bookinfo-ratings
+  namespace: bookinfo
   labels:
     account: ratings
 ---
@@ -105,6 +83,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ratings-v1
+  namespace: bookinfo
   labels:
     app: ratings
     version: v1
@@ -135,6 +114,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: reviews
+  namespace: bookinfo
   labels:
     app: reviews
     service: reviews
@@ -149,6 +129,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: bookinfo-reviews
+  namespace: bookinfo
   labels:
     account: reviews
 ---
@@ -156,6 +137,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: reviews-v1
+  namespace: bookinfo
   labels:
     app: reviews
     version: v1
@@ -196,6 +178,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: reviews-v2
+  namespace: bookinfo
   labels:
     app: reviews
     version: v2
@@ -236,6 +219,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: reviews-v3
+  namespace: bookinfo
   labels:
     app: reviews
     version: v3
@@ -279,6 +263,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: productpage
+  namespace: bookinfo
   labels:
     app: productpage
     service: productpage
@@ -293,6 +278,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: bookinfo-productpage
+  namespace: bookinfo
   labels:
     account: productpage
 ---
@@ -300,6 +286,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: productpage-v1
+  namespace: bookinfo
   labels:
     app: productpage
     version: v1
