--- a/.github/workflows/deploy_oas.yaml
+++ b/.github/workflows/deploy_oas.yaml
@@ -86,6 +86,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Authe2e
+        run: |
+          chmod +x ./tests/e2e.sh
+
       - name: Confirmation
         run: |
           ./tests/e2e.sh nothing
