--- a/.github/workflows/deploy_oas.yaml
+++ b/.github/workflows/deploy_oas.yaml
@@ -1,15 +1,15 @@
 name: Convert OpenAPI Spec to Kong and Deploy
-
+ 
 on:
   push:
     paths:
       - openapi.yaml
-
+ 
 env:
   KONNECT_URL: "https://${{ vars.KONNECT_REGION }}.api.konghq.com"
   CONTROL_PLANE: ${{ vars.CONTROL_PLANE }}
   TAG: ${{ vars.TAG }}
-
+ 
 jobs:
   lint-spec:
     runs-on: ubuntu-latest
@@ -20,10 +20,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
+ 
       - name: Run inso lint
         run: inso lint spec $SPECFILE --verbose
-
+ 
   deploy-oas:
     runs-on: ubuntu-latest
     needs: lint-spec
@@ -35,19 +35,20 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
+ 
       - name: Convert from OpenAPI Spec to Kong Config
         run: |
-          set -x 
+          set -x
           deck file openapi2kong -s $SPECFILE -o ./kong.yaml --verbose 9
+          deck file add-plugins -s ./kong.yaml -o ./kong.yaml kong-plugins/*
           deck file add-tags -s ./kong.yaml -o ./kong.yaml $TAG
           cat kong.yaml
-
+ 
       - uses: actions/upload-artifact@v4
         with:
           name: kong.yaml
           path: kong.yaml
-
+ 
       - name: Back up current settings
         run: |
           deck gateway dump -o ./current-kong.yaml \
@@ -55,12 +56,12 @@ jobs:
             --konnect-control-plane-name $CONTROL_PLANE \
             --konnect-token ${{ secrets.KONNECT_TOKEN }}
           cat ./current-kong.yaml
-
+ 
       - uses: actions/upload-artifact@v4
         with:
           name: backup
           path: current-kong.yaml
-
+ 
       - name: Diff current settings and kong.yaml
         run: |
           deck gateway diff ./kong.yaml \
@@ -68,7 +69,7 @@ jobs:
             --konnect-control-plane-name $CONTROL_PLANE \
             --konnect-token ${{ secrets.KONNECT_TOKEN }} \
             --select-tag $TAG
-
+ 
       - name: Deploy Kong Config
         run: |
           deck gateway sync ./kong.yaml \
@@ -76,7 +77,7 @@ jobs:
             --konnect-control-plane-name $CONTROL_PLANE \
             --konnect-token ${{ secrets.KONNECT_TOKEN }} \
             --select-tag $TAG
-
+ 
   test:
     runs-on: ubuntu-latest
     needs: deploy-oas
@@ -85,11 +86,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
+     
       - name: Authe2e
         run: |
           chmod +x ./tests/e2e.sh
-
+ 
       - name: Confirmation
         run: |
           ./tests/e2e.sh nothing
