--- a/.github/workflows/upload_doc.yaml
+++ b/.github/workflows/upload_doc.yaml
@@ -3,7 +3,7 @@ name: Upload Document for API Product to Konnect / Dev Portal
 on:
   push:
     paths:
-      - docs/README.md
+      - README.md
 
 env:
   REGIONAL_EP: "https://${{ vars.KONNECT_REGION }}.api.konghq.com/v3"
@@ -25,7 +25,7 @@ jobs:
       - name: Upload README.md
         shell: bash
         run: |
-          file="docs/README.md"
+          file="README.md"
           msg="Document '$file' has been successfully uploaded."
           return_code=0
           set -x
