--- a/.github/workflows/deploy_oas.yaml
+++ b/.github/workflows/deploy_oas.yaml
@@ -3,7 +3,7 @@ name: Convert OpenAPI Spec to Kong and Deploy
 on:
   push:
     paths:
-      - yumakobayashi111/bookinfo-bootcamp/openapi.yaml
+      - openapi.yaml
 
 env:
   KONNECT_URL: "https://${{ vars.KONNECT_REGION }}.api.konghq.com"
