--- a/.github/workflows/upload_spec.yaml
+++ b/.github/workflows/upload_spec.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Upload openapi.yaml
         shell: bash
         run: |
-          file="docs/openapi/openapi.yaml"
+          file="openapi.yaml"
           msg="Document '$file' has been successfully uploaded."
           return_code=0
           set -x
